# ReflectlyAPI

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/apis/endpoints/: __init__.py  feedback_endponts.py
app/constant/: __init__.py  app_status.py  feedback_constants.py  master.py
app/core/: __init__.py  exceptions.py  logger.py  logging.conf  settings.py
app/routers/: routers.py
app/schemas/: __init__.py  feedback_schemas.py
app/services/: __init__.py  feedback_service.py
app/utils/: __init__.py  convert_util.py
